--- a/art/androidtrackshelp.html
+++ b/art/androidtrackshelp.html
@@ -14,16 +14,15 @@
 	<COL WIDTH=256*>
 	<TR>
 		<TD WIDTH=100%>
-			<P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><B><IMG SRC="/cycletracks48.png" NAME="CycleTracks Logo" ALT="CycleTracks Logo" ALIGN=LEFT BORDER=0>CycleTracks
+			<P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><B><IMG SRC="/cycletracks48.png" NAME="DemoTracks Logo" ALT="DemoTracks Logo" ALIGN=LEFT BORDER=0>DemoTracks
 			Help</B></FONT></FONT><br/>
 		</TD>
 	</TR>
 </TABLE>
 <P STYLE="font-weight: normal"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>Thanks
-for downloading <I><B>CycleTracks</B></I> from the San Francisco
-County Transportation Authority! Here are some tips for using it.
+for downloading <I><B>DemoTracks</B></I> from Dullahan Software! Here are some tips for using it.
 You can also get info from our main website,
-<a href="http://www.sfcta.org/cycletracks">www.sfcta.org/cycletracks</a>.</FONT></FONT></P>
+<a href="https://my-cycle-tracks.heroku.com">my-cycle-tracks.heroku.com</a>.</FONT></FONT></P>
 
 <HR/>
 <P><A HREF="#Usage"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><SPAN STYLE="font-style: normal"><B>USAGE
@@ -42,14 +41,13 @@ NOTES</B></SPAN></FONT></FONT></A></P>
 FREQUENTLY ASKED QUESTIONS</B></SPAN></FONT></FONT></A></P>
 <UL>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F1"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>What
-	is the CycleTracks Application?</FONT></FONT></A></P>
+	is the DemoTracks Application?</FONT></FONT></A></P>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F2"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>Why
 	are you doing this?</FONT></FONT></A></P>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F3"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>How
-	long should I keep using CycleTracks?</FONT></FONT></A></P>
+	long should I keep using DemoTracks?</FONT></FONT></A></P>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F4"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>Why
-	are my trip purpose and personal info important to the SF County
-	Transportation Authority?</FONT></FONT></A></P>
+	are my trip purpose and personal info important to Dullahan Software?</FONT></FONT></A></P>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F5"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>What
 	about my email address? I don't want any spam.</FONT></FONT></A></P>
 	<LI><P STYLE="margin-bottom: 0in"><A HREF="#F6"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>What
@@ -72,16 +70,16 @@ Recording a Trip</B></FONT></FONT></P>
 	you're done with your ride.</SPAN></SPAN></FONT></FONT></P>
 	<LI><P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><SPAN STYLE="font-style: normal"><SPAN STYLE="font-weight: normal">Thanks
 	to Android's background-app capability, you don't need to do
-	anything special to keep CycleTracks running. You can set the phone
+	anything special to keep DemoTracks running. You can set the phone
 	to sleep, or use other apps while recording. (take that, iPhone
-	users!) The small green CycleTracks icon in the notification bar
+	users!) The small green DemoTracks icon in the notification bar
 	will keep recording your moves. </SPAN></SPAN><I><SPAN STYLE="font-weight: normal">Note
-	that the SFCTA does not recommend using your phone while you're in
+	that the Dullahan Software does not recommend using your phone while you're in
 	motion!</SPAN></I></FONT></FONT></P>
 	<LI><P STYLE="font-style: normal; font-weight: normal"><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>In
 	order to remind you that the app is running and to save your
 	battery, your phone will ring like a bicycle bell after 15 minutes,
-	and every 5 minutes thereafter. If CycleTracks is running when your
+	and every 5 minutes thereafter. If DemoTracks is running when your
 	battery reaches less than 10% of its charge, the app will
 	automatically stop collecting data and quit. </FONT></FONT>
 	</P>
@@ -110,10 +108,10 @@ study, and will enter you into a raffle for some neat prizes. </FONT></FONT>
 <P STYLE="font-style: normal"><A NAME="FAQ"></A><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><B>FAQ:
 FREQUENTLY ASKED QUESTIONS</B></FONT></FONT></P>
 <P><A NAME="F1"></A><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><I>WHAT
-IS THE CYCLETRACKS APPLICATION?</I></FONT></FONT></P>
+IS THE DemoTracks APPLICATION?</I></FONT></FONT></P>
 <P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>In order
 to collect data on why and where cyclists ride, we developed the
-CycleTracks iPhone application. CycleTracks uses the iPhone's GPS
+DemoTracks iPhone application. DemoTracks uses the iPhone's GPS
 function to track bicycle trip routes. Users specify a purpose for
 each trip (commuting, shopping, exercise, etc.) and tell the app when
 to start and stop recording the ride. At the end, data representing
@@ -129,31 +127,28 @@ forecasting tool for transportation planning in San Francisco. It is
 a state-of-the-art computer model that predicts future travel
 patterns within the Bay Area.</FONT></FONT></P>
 <P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>The goal
-is to better understand where cyclists ride in San Francisco and the
-Bay Area, the factors that influence route choices (slope, presence
+is to better understand where cyclists ride in Sacramento, the factors that influence route choices (slope, presence
 of bike lanes, purpose of trip, etc.) and how transportation
 infrastructure and land developments might affect cyclists choosing
 to ride on particular streets.</FONT></FONT></P>
 <P><A NAME="F3"></A><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><I>HOW
-LONG SHOULD I KEEP USING CYCLETRACKS?</I></FONT></FONT></P>
+LONG SHOULD I KEEP USING DemoTracks?</I></FONT></FONT></P>
 <P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>We hope
-you'll use CycleTracks right away and get us as much data as possible
-before the rainy season really kicks in. So, all through November and
-December we're hoping you'll keep on using it. The servers are
+you'll use DemoTracks right away and get us as much data as possible
+before the rainy season really kicks in. So, all through the year 
+we're hoping you'll keep on using it. The servers are
 running all through the winter and spring, and we will continue to
 update the app to make it easier and faster to use, so there's no
 reason to stop using it. The more data we receive, the more we can do
-for Bay Area cyclists!</FONT></FONT></P>
+for cyclists!</FONT></FONT></P>
 <P><A NAME="F4"></A><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><I>WHY
-ARE MY TRIP PURPOSE AND PERSONAL INFO IMPORTANT TO THE SF
-TRANSPORTATION AUTHORITY?</I></FONT></FONT></P>
+ARE MY TRIP PURPOSE AND PERSONAL INFO IMPORTANT TO THE DULLAHAN SOFTWARE?</I></FONT></FONT></P>
 <P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2>This is
 a new, one-of-a-kind dataset that's never been collected before. Our
 research has shown that different types of people use different
 routes, and that biking for exercise is really different from biking
 for groceries or commuting. Those little extra bits of information go
-a long way toward helping us understand how people cycle in San
-Francisco. You don't *have* to enter any personal info, but we hope
+a long way toward helping us understand how people cycle in Sacramento. You don't *have* to enter any personal info, but we hope
 you will since it just takes a few seconds and will never be
 personally identifiable.</FONT></FONT></P>
 <P><A NAME="F5"></A><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><I>WHAT
@@ -183,7 +178,7 @@ you wish to give us your email address (which will not be shared with
 any third parties), we can keep you updated on the progress of the
 study.</FONT></FONT></P>
 <P><FONT FACE="Georgia, Times New Roman, serif"><FONT SIZE=2><I>&copy;
-2009 San Francisco County Transportation Authority. The CycleTracks
+2012 Dullahan Software. The DemoTracks
 name and logo are trademarked.</I></FONT></FONT></P>
 </BODY>
 </HTML>
